<resources>
    <string name="app_name">濒湖</string>
    <string name="nav_herb_title">中药</string>
    <string name="nav_prescription_title">方剂</string>
    <string name="nav_sphygmology_title">脉学</string>
    <string name="nav_channel_title">经络</string>
    <string name="read_pic">识图</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_open">打开</string>
    <string name="update">更新数据</string>
    <string name="search_medicine">查询中药和方剂</string>
    <string name="please_login">点击头像登录</string>
    <string name="label1">标题1</string>
    <string name="btn_name">按钮</string>
    <string name="medicine_tab_all">全部</string>
    <string name="medicine_tab_five_flavors">五味</string>
    <string name="medicine_tab_four_natures">四气</string>
    <string name="setting">设置</string>
    <string name="theme">主题</string>
    <string name="moon">夜间</string>
    <string name="desc_btn_setting">软件设置</string>
    <string name="desc_btn_theme">选择软件界面主题</string>
    <string name="desc_btn_moon">夜间护眼模式</string>
    <string name="home">首页</string>
    <string name="history">历史记录</string>
    <string name="star">收藏夹</string>
    <string name="clear_storage">清理存储空间</string>
    <string name="help">帮助</string>
    <string name="update_setting">更新设置</string>
    <string name="logout">退出登录</string>
    <string name="separator">分隔符</string>
    <string name="cancel">取消</string>
    <string name="search_medicine_holder">甘草</string>
    <string name="search_history">搜索历史</string>
    <string name="spread">展开</string>
    <string name="clear_search">清除搜索记录</string>
    <string name="shrink">收起</string>
    <string name="ok">确认</string>
    <string name="delete_alert_msg">确认清除全部搜索历史记录吗？</string>
    <string name="default_confirm_msg">确认要执行此操作吗</string>
    <string name="no_search_history">已经没有搜索历史记录了</string>
    <string name="about">关于</string>
    <string name="about_title">关于此应用</string>
    <string name="about_app_name">
        关于应用名称：濒湖来源于李时珍的号“濒湖山人”，此应用中的数据，中药、方剂多出自《本草纲目》，脉学多出于《濒湖脉学》，
        为纪念李时珍，取名“濒湖”
    </string>
    <string name="intro_li_shi_zhen">
        李时珍简介：李时珍（1518至1593），字东璧，晚年自号濒湖山人，湖北蕲春县蕲州镇东长街之瓦屑坝（今博士街）人，明代著名医药学家。
        李时珍自1565年起，先后到武当山、庐山、茅山、牛首山及湖广、安徽、河南、河北等地收集药物标本和处方，
        并拜渔人、樵夫、农民、车夫、药工、捕蛇者为师，参考历代医药等方面书籍925种，考古证今、穷究物理”，
        记录上千万字札记，弄清许多疑难问题，历经27个寒暑，三易其稿，于明万历十八年（1590年）完成了192万字的巨著《本草纲目》，
        此外对脉学及奇经八脉也有研究。著述有《奇经八脉考》《濒湖脉学》等多种。被后世尊为 “药圣”
    </string>
    <string name="story">小故事（以后加）</string>
    <string name="update_info_title">更新数据</string>
    <string name="loading">正在加载</string>
    <string name="download">下载</string>
    <string name="downloading">正在下载</string>
    <string name="medicine_detail">中药详解</string>
</resources>
