<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/top_container">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/setting"
        app:titleTextColor="@color/white"
        style="@style/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContent"
        android:orientation="vertical">

        <View style="@style/setting_vertical_separator" />

        <TextView
            style="@style/setting_item.right_arrow"
            android:text="@string/clear_storage" />

        <TextView
            style="@style/setting_item.right_arrow"
            android:text="@string/help" />

        <View style="@style/setting_vertical_separator" />

        <TextView
            style="@style/setting_item.right_arrow"
            android:text="@string/update_setting" />
        <TextView
            style="@style/setting_item.right_arrow"
            android:text="@string/about" />

        <View style="@style/setting_vertical_separator" />

        <TextView
            android:id="@+id/logout"
            style="@style/setting_item"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/logout"
            android:textColor="@color/red" />
    </LinearLayout>
</LinearLayout>