<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/medicine"
        android:enabled="true"
        android:icon="@mipmap/ic_nav_herb_round"
        android:title="@string/nav_herb_title"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/prescription"
        android:enabled="true"
        android:icon="@mipmap/ic_nav_herb_round"
        android:title="@string/nav_prescription_title"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/sphygmology"
        android:enabled="true"
        android:icon="@mipmap/ic_nav_herb_round"
        android:title="@string/nav_sphygmology_title"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/channel"
        android:enabled="true"
        android:icon="@mipmap/ic_nav_herb_round"
        android:title="@string/nav_channel_title"
        app:showAsAction="ifRoom"/>
</menu>